Shorten nginx.conf
I read more Nginx documentation and realized I was overcomplicating things,
and this is how you can match both / and /index.html, and catch the rest in
another location declaration.

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,21 +3,11 @@ server {
     server_name    amionline.80x24.ca;
 
     root /var/www/amionline;
+    index index.html;
 
-    if ($uri ~ "^/(.+)$") {
-        set $uri_stripped $1;
-    }
-
-    # this is needed so that `GET /` works
-    location = / {
-        index index.html;
-    }
-    # this will catch the `GET /index.html` and everything else
-    location / {
-        try_files $uri @fallback;
-    }
-    location @fallback {
+    location = /index.html { }
+    location ~ ^/(.+)$ {
         default_type text/plain;
-        return 200 $uri_stripped;
+        return 200 $1;
     }
 }
