Ensure Nginx always sends Content-Type: text/plain

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,9 @@ server {
 
     location = /index.html { }
     location ~ ^/(.+)$ {
+        # clear the types so that nginx doesn't try to figure out the type from
+        # the URI ending and will use default_type for everything
+        types { }
         default_type text/plain;
         return 200 $1;
     }
